# research-bot

./: .gitignore  BENCHMARKS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: README.md  results.jsonl
bench/cases/extract/calfire-forest-health/: facts.json  source.md
bench/cases/extract/cec-battery-storage/: case.json  facts.json  source.md
bench/cases/extract/csfs-frwrm-rfa/: facts.json
bench/cases/extract/deeprobotics-x30/: case.json  facts.json  source.md
bench/cases/plan/cbs-ai-water-factcheck/: brief.md  case.json  reference-plan.md
bench/cases/plan/us-water-usage/: brief.md  case.json  reference-plan.md
bench/cases/summarize/aperiodical-another-roof/: case.json
bench/cases/summarize/aperiodical-standoesmath/: case.json  source.md
bench/cases/summarize/arxiv-undercanopy-drone-inventory/: case.json  facts.md  source.md
bench/cases/summarize/caiso-battery-storage-report/: case.json  facts.md  source.md
bench/cases/summarize/calfire-forest-health-grants/: case.json  facts.md
bench/cases/summarize/csfs-frwrm-grant-rfa/: case.json  facts.md  source.md
bench/cases/summarize/github-youtube-channels/: case.json  source.md
bench/cases/summarize/iea-energy-ai/: case.json  facts.md  source.md
bench/cases/summarize/msft-sustainability/: case.json  facts.md  source.md
docs/: playbook.md
research_bot/: __init__.py  __main__.py  agents.py  bench.py  cli.py  config.py  fetch.py  keys.py  ledger.py  llm.py  pricing.py  report.py  search.py  serve.py  store.py  verify.py
tests/: test_bench.py  test_keys.py  test_meter_compat.py  test_search.py  test_serve_files.py  test_store.py  test_verify.py
(+37 files in other folders)
